--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,5 +25,5 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true
   },
-  "exclude": ["tmp", "node_modules", "**/build**"]
+  "exclude": ["tmp", "node_modules", "**/build**","alternatives"]
 }
