--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@universal-labs/primitives": "workspace:*",
     "@universal-labs/twind-adapter": "workspace:*",
+    "class-variance-authority": "^0.6.1",
     "expo": "^48.0.15",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-svg": "13.4.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.11"
   },
