--- a/examples/expo-app/app.json
+++ b/examples/expo-app/app.json
@@ -3,7 +3,7 @@
     "name": "universal-expo",
     "slug": "universal-expo",
     "version": "1.0.0",
-    "jsEngine": "jsc",
+    "jsEngine": "hermes",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
