--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -12,22 +12,22 @@
     "@universal-labs/primitives": "workspace:*",
     "@universal-labs/twind-adapter": "workspace:*",
     "class-variance-authority": "^0.6.1",
-    "expo": "^48.0.15",
-    "expo-font": "~11.1.1",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.7",
-    "react-native-svg": "13.4.0",
+    "expo": "^49.0.2",
+    "expo-font": "~11.4.0",
+    "expo-status-bar": "~1.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.72.1",
+    "react-native-svg": "13.9.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.18.11"
+    "react-native-web": "^0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "7.18.6",
-    "@types/react": "~18.0.27",
-    "@types/react-dom": "~18.0.10",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "babel-plugin-module-resolver": "^5.0.0"
   }
 }
