--- a/examples/next-app/package.json
+++ b/examples/next-app/package.json
@@ -16,11 +16,9 @@
     "autoprefixer": "10.4.13",
     "critters": "^0.0.16",
     "next": "13.1.4",
-    "postcss": "^8.4.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native-web": "~0.18.10",
-    "tailwindcss": "^3.2.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native-web": "^0.19.6"
   },
   "devDependencies": {
     "next-compose-plugins": "^2.2.1"
