--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "web": "npx nx dev start --project=next-app"
   },
   "resolutions": {
-    "@twind/core@1.1.3": "patch:@twind/core@npm%3A1.1.3#./.yarn/patches/@twind-core-npm-1.1.3-62b4eeba21.patch",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@twind/core@1.1.3": "patch:@twind/core@npm%3A1.1.3#./.yarn/patches/@twind-core-npm-1.1.3-62b4eeba21.patch"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
@@ -60,14 +58,14 @@
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "expo-module-scripts": "^3.0.7",
+    "expo-module-scripts": "^3.0.11",
     "happy-dom": "latest",
     "jsdom": "latest",
     "nx": "15.8.7",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
-    "tslib": "^2.3.0",
-    "typescript": "^4.9.4",
+    "tslib": "^2.6.0",
+    "typescript": "^5.1.6",
     "vite": "^4.1.1",
     "vite-plugin-dts": "^2.2.0",
     "vitest": "^0.31.1"
