--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -44,8 +44,8 @@
     "@universal-labs/styled": "workspace:*"
   },
   "devDependencies": {
-    "@types/react": "18.0.28",
-    "@types/react-dom": "~18.0.10"
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6"
   },
   "peerDependencies": {
     "react": ">=18",
