--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -50,7 +50,7 @@
     "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
-    "@types/react": "~18.0.27",
+    "@types/react": "^18.2.14",
     "vitest": "^0.31.1"
   },
   "peerDependencies": {
