--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -50,8 +50,8 @@
   },
   "devDependencies": {
     "@types/node": "16.11.7",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "~18.0.10",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@types/react-is": "^17.0.3",
     "@types/use-sync-external-store": "^0.0.3",
     "vite-plugin-multiple": "0.2.0"
