--- a/packages/styled/tsconfig.build.json
+++ b/packages/styled/tsconfig.build.json
@@ -2,8 +2,7 @@
   "extends": "expo-module-scripts/tsconfig.base",
   "compilerOptions": {
     "outDir": "./build",
-    "rootDir": "./src",
-    "types": ["node"]
+    "rootDir": "./src"
   },
   "include": ["./src", "env.d.ts"],
   "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*"]
