--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-react": "7.18.6",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "babel-plugin-module-resolver": "^5.0.0"
+    "babel-plugin-module-resolver": "^5.0.0",
+    "typescript": "^5.1.3"
   }
 }
