--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "web": "npx nx dev start --project=next-app"
   },
   "resolutions": {
-    "@twind/core@1.1.3": "patch:@twind/core@npm%3A1.1.3#./.yarn/patches/@twind-core-npm-1.1.3-62b4eeba21.patch"
+    "@twind/core@1.1.3": "patch:@twind/core@npm%3A1.1.3#./.yarn/patches/@twind-core-npm-1.1.3-62b4eeba21.patch",
+    "vitest-react-native@^0.1.2": "patch:vitest-react-native@npm%3A0.1.2#./.yarn/patches/vitest-react-native-npm-0.1.2-0858752826.patch"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
@@ -42,7 +43,6 @@
     "@nrwl/nx-cloud": "latest",
     "@rollup/plugin-terser": "^0.4.1",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
-    "@types/node": "16.11.7",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
@@ -65,10 +65,11 @@
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tslib": "^2.6.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.1.3",
     "vite": "^4.1.1",
     "vite-plugin-dts": "^2.2.0",
-    "vitest": "^0.31.1"
+    "vitest": "^0.31.1",
+    "vitest-react-native": "^0.1.2"
   },
   "packageManager": "yarn@3.4.1"
 }
