--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "typescript": "^5.1.3",
     "vite": "^4.1.1",
     "vite-plugin-dts": "^2.2.0",
+    "vite-plugin-multiple": "0.2.0",
     "vitest": "^0.31.1",
     "vitest-react-native": "^0.1.2"
   },
