--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build:libs": "npx nx run-many --target=build:libs",
     "build:release": "yarn build:libs && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
-    "dev": " nx watch --projects=stylesheets,primitives,styled,css,twind-adapter -- nx run \\$NX_PROJECT_NAME:build:libs",
+    "dev": " nx watch --projects=primitives,styled,css,twind-adapter -- nx run \\$NX_PROJECT_NAME:build:libs",
     "docs:build": "npx nx run build --project=docusaurus",
     "docs:dev": "npx nx run dev --project=docusaurus",
     "expo:android": "yarn workspace expo-app run android",
