--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -42,7 +42,8 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@universal-labs/stylesheets": "workspace:*",
+    "@universal-labs/css": "workspace:*",
+    "@universal-labs/twind-adapter": "workspace:*",
     "react-is": "^18.2.0",
     "stable-hash": "0.0.3",
     "tailwind-merge": "^1.10.0",
