--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -5,7 +5,6 @@
   "keywords": [
     "react-native",
     "tailwindcss",
-    "postcss",
     "tailwind-ui",
     "react-native-web",
     "react-native-tailwindcss",
@@ -24,8 +23,8 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
-  "main": "./build/index.js",
-  "module": "./build/index.js",
+  "main": "./build/index",
+  "browser": "./build/index",
   "types": "./build/index.d.ts",
   "files": [
     "build",
@@ -35,9 +34,9 @@
     "README.md"
   ],
   "scripts": {
-    "build:libs": "expo-module build -p tsconfig.build.json",
+    "build:libs": "vite build",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
-    "test": "vitest run -c vite.config.web.ts",
+    "test": "vitest run",
     "test:ui": "yarn vitest --ui"
   },
   "dependencies": {
