--- a/package.json
+++ b/package.json
@@ -58,12 +58,12 @@
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "expo-module-scripts": "^3.0.11",
     "happy-dom": "latest",
     "jsdom": "latest",
     "nx": "16.5.2",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
+    "react-test-renderer": "18.2.0",
     "tslib": "^2.6.0",
     "typescript": "^5.1.3",
     "vite": "^4.1.1",
