--- a/package.json
+++ b/package.json
@@ -36,16 +36,16 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
-    "@nrwl/devkit": "15.8.7",
-    "@nrwl/eslint-plugin-nx": "15.8.7",
-    "@nrwl/js": "15.9.2",
-    "@nrwl/linter": "15.8.7",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/devkit": "16.5.2",
+    "@nrwl/eslint-plugin-nx": "16.5.2",
+    "@nrwl/js": "16.5.2",
+    "@nrwl/linter": "16.5.2",
+    "@nrwl/nx-cloud": "16.1.0",
     "@rollup/plugin-terser": "^0.4.1",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "@vitejs/plugin-react-swc": "^3.2.0",
     "@vitest/coverage-istanbul": "^0.31.1",
     "@vitest/ui": "^0.31.1",
@@ -58,12 +58,12 @@
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "expo-module-scripts": "^3.0.11",
     "happy-dom": "latest",
     "jsdom": "latest",
-    "nx": "15.8.7",
+    "nx": "16.5.2",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
+    "react-test-renderer": "18.2.0",
     "tslib": "^2.6.0",
     "typescript": "^5.1.3",
     "vite": "^4.1.1",
