--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -13,6 +13,7 @@
     "@universal-labs/twind-adapter": "workspace:*",
     "class-variance-authority": "^0.6.1",
     "expo": "^49.0.3",
+    "expo-build-properties": "~0.8.3",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "^18.2.0",
