--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -40,9 +40,7 @@
     "@universal-labs/css": "workspace:*",
     "@universal-labs/twind-adapter": "workspace:*",
     "react-is": "^18.2.0",
-    "stable-hash": "0.0.3",
-    "tailwind-merge": "^1.10.0",
-    "use-sync-external-store": "^1.2.0"
+    "stable-hash": "0.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
