--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -27,8 +27,8 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "7.18.6",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.0.10",
     "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
   }
