--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -43,8 +43,8 @@
     "@universal-labs/styled": "workspace:*"
   },
   "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6"
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.0.10"
   },
   "peerDependencies": {
     "react": ">=18",
