--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -43,8 +43,8 @@
     "stable-hash": "0.0.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.0.10",
     "@types/react-is": "^17.0.3"
   },
   "peerDependencies": {
