feat(core): styled component

--- a/examples/expo-app/tsconfig.json
+++ b/examples/expo-app/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "lib": ["DOM", "ESNext"],
+    "exactOptionalPropertyTypes": false,
     "allowJs": true,
     "resolveJsonModule": true,
     "noEmit": true
