--- a/packages/styled/tsconfig.json
+++ b/packages/styled/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "./build",
     "sourceMap": false,
     "noEmit": false,
+    "exactOptionalPropertyTypes": true,
     "importHelpers": true
   },
   "include": ["src", "test"]
