feat(styled): styled components props fix

--- a/packages/styled/tsconfig.json
+++ b/packages/styled/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "./build",
     "sourceMap": false,
     "noEmit": false,
-    "exactOptionalPropertyTypes": true,
+    "exactOptionalPropertyTypes": false,
     "importHelpers": true
   },
   "include": ["src", "test"]
