--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -45,7 +45,8 @@
   "devDependencies": {
     "@types/react": "18.2.14",
     "@types/react-dom": "18.0.10",
-    "@types/react-is": "^17.0.3"
+    "@types/react-is": "^17.0.3",
+    "tailwindest": "2.1.1"
   },
   "peerDependencies": {
     "react": ">=18",
