fix(libs): clean libs

--- a/packages/styled/tsconfig.json
+++ b/packages/styled/tsconfig.json
@@ -2,13 +2,13 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "declarationMap": false,
-    "jsx": "react-jsx",
+    "jsx": "react-native",
     "outDir": "./build",
     "sourceMap": false,
     "noEmit": false,
-    "noErrorTruncation": true,
+    "module": "ES2020",
     "exactOptionalPropertyTypes": false,
     "importHelpers": true
   },
-  "include": ["src", "test"]
+  "include": ["src", "test","vite.config.*"]
 }
