--- a/packages/twind-adapter/tsconfig.json
+++ b/packages/twind-adapter/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx",
+    "module": "ES2020",
     "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
