fix(libs): clean libs

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "apps/*"
   ],
   "scripts": {
-    "build:libs": "npx nx run-many --target=build:libs",
+    "build:libs": "yarn nx run-many --target=build:libs",
     "build:release": "yarn build:libs && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
     "dev": " nx watch --projects=styled,css,twind-adapter -- nx run \\$NX_PROJECT_NAME:build:libs",
     "docs:build": "npx nx run build --project=docusaurus",
@@ -36,11 +36,11 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
-    "@nrwl/devkit": "16.5.5",
-    "@nrwl/eslint-plugin-nx": "16.5.5",
-    "@nrwl/js": "16.5.5",
-    "@nrwl/linter": "16.5.5",
-    "@nrwl/nx-cloud": "16.1.1",
+    "@nrwl/devkit": "16.5.2",
+    "@nrwl/eslint-plugin-nx": "16.5.2",
+    "@nrwl/js": "16.5.2",
+    "@nrwl/linter": "16.5.2",
+    "@nrwl/nx-cloud": "16.1.0",
     "@rollup/plugin-terser": "^0.4.1",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/react-test-renderer": "^18.0.0",
@@ -60,7 +60,7 @@
     "eslint-plugin-unused-imports": "2.0.0",
     "happy-dom": "latest",
     "jsdom": "latest",
-    "nx": "16.5.5",
+    "nx": "16.5.2",
     "prettier": "^2.8.3",
     "react-test-renderer": "18.2.0",
     "tslib": "^2.6.0",
