feat(ts): intellisense plugin for css in styled

--- a/package.json
+++ b/package.json
@@ -40,13 +40,19 @@
     "@nrwl/linter": "16.5.2",
     "@nrwl/nx-cloud": "16.1.0",
     "@rollup/plugin-terser": "^0.4.1",
-    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "@types/chai": "4.3.5",
+    "@types/glob": "^8.1.0",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "20.2.5",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/vscode": "^1.80.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "@vitest/coverage-istanbul": "^0.31.1",
     "@vitest/ui": "^0.31.1",
+    "@vscode/test-electron": "^2.3.2",
+    "chai": "4.3.7",
     "concurrently": "^7.6.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -56,8 +62,10 @@
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
+    "glob": "^8.1.0",
     "happy-dom": "latest",
     "jsdom": "latest",
+    "mocha": "^10.2.0",
     "nx": "16.5.2",
     "prettier": "^2.8.3",
     "react-test-renderer": "18.2.0",
