--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -11,7 +11,7 @@
         "--extensionDevelopmentPath=${workspaceRoot}"
       ],
       "sourceMaps": true,
-      "outFiles": ["${workspaceRoot}/build/**/*.js"],
+      "outFiles": ["${workspaceRoot}/client/out/**/*.js"],
       "preLaunchTask": {
         "type": "npm",
         "script": "watch"
@@ -25,10 +25,10 @@
       "args": [
         "--disable-extensions",
         "--extensionDevelopmentPath=${workspaceRoot}",
-        "--extensionTestsPath=${workspaceRoot}/build/test/index",
-        "${workspaceRoot}/testFixture"
+        "--extensionTestsPath=${workspaceRoot}/client/out/test/index",
+        "${workspaceRoot}/client/testFixture"
       ],
-      "outFiles": ["${workspaceRoot}/build/test/**/*.js"]
+      "outFiles": ["${workspaceRoot}/client/out/test/**/*.js"]
     }
   ]
 }
