feat(ts): intellisense plugin for css in styled

--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -8,6 +8,7 @@
       "name": "Launch Demo Client",
       "runtimeExecutable": "${execPath}",
       "args": [
+        "--disable-extensions",
         "--extensionDevelopmentPath=${workspaceRoot}"
       ],
       "sourceMaps": true,
