--- a/packages/vscode-extension/client/package.json
+++ b/packages/vscode-extension/client/package.json
@@ -5,6 +5,9 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "publisher": "universal-labs",
+  "scripts": {
+    "build": "tsc -b"
+  },
   "dependencies": {
     "vscode-languageclient": "^8.1.0"
   },
