--- a/packages/ts-plugin/e2e/project-fixture/tsconfig.json
+++ b/packages/ts-plugin/e2e/project-fixture/tsconfig.json
@@ -2,6 +2,6 @@
   "compilerOptions": {
     "target": "ES2021",
     "module": "commonjs",
-    "plugins": [{ "name": "@universal-labs/ts-styled-plugin-tw", "tags": ["css", "keyframes"] }]
+    "plugins": [{ "name": "@universal-labs/ts-styled-plugin-tw", "tags": ["css"] }]
   }
 }
