--- a/packages/ts-plugin/package.json
+++ b/packages/ts-plugin/package.json
@@ -7,13 +7,15 @@
   "main": "build/index.js",
   "scripts": {
     "build:libs": "tsc -p .",
-    "e2e": "mocha e2e/tests --slow 2000 --timeout 10000",
+    "e2e": "mocha e2e/tests",
     "lint": "eslint src",
     "unit": "npx mocha ./build/test",
     "watch:compile": "tsc -p . --watch"
   },
   "dependencies": {
     "@vscode/emmet-helper": "2.9.2",
+    "postcss": "8.4.27",
+    "tailwindcss": "^3.3.3",
     "typescript-template-language-service-decorator": "2.3.2",
     "vscode-css-languageservice": "6.2.6",
     "vscode-languageserver-textdocument": "1.0.8"
