--- a/packages/tailwind-postcss-adapter/package.json
+++ b/packages/tailwind-postcss-adapter/package.json
@@ -59,9 +59,11 @@
   "devDependencies": {
     "@types/css-tree": "2.3.1",
     "@types/postcss-css-variables": "0.18.0",
+    "@types/postcss-js": "4.0.1",
     "@types/tailwindcss": "3.1.0",
     "css-tree": "2.3.1",
     "postcss-css-variables": "^0.18.0",
+    "postcss-js": "4.0.1",
     "tailwindcss": "^3.3.3",
     "tsx": "3.12.6"
   },
