--- a/packages/ts-plugin/package.json
+++ b/packages/ts-plugin/package.json
@@ -13,6 +13,7 @@
     "watch:compile": "tsc -p . --watch"
   },
   "dependencies": {
+    "@universal-labs/twind-adapter": "workspace:*",
     "@vscode/emmet-helper": "2.9.2",
     "postcss": "8.4.27",
     "tailwindcss": "^3.3.3",
