--- a/packages/ts-plugin/package.json
+++ b/packages/ts-plugin/package.json
@@ -10,6 +10,7 @@
     "build:libs": "node ./build.js",
     "e2e": "mocha e2e/tests",
     "lint": "eslint src",
+    "test": "vitest",
     "unit": "npx mocha ./build/test",
     "watch:compile": "node ./build.js --watch"
   },
@@ -17,10 +18,14 @@
     "@twind/intellisense": "1.1.3",
     "@universal-labs/twind-adapter": "workspace:*",
     "@vscode/emmet-helper": "2.9.2",
-    "postcss": "8.4.27",
-    "tailwindcss": "^3.3.3",
     "typescript-template-language-service-decorator": "2.3.2",
     "vscode-css-languageservice": "6.2.6",
     "vscode-languageserver-textdocument": "1.0.8"
+  },
+  "devDependencies": {
+    "@types/cssbeautify": "0.3.2",
+    "@types/showdown": "2.0.1",
+    "cssbeautify": "0.3.1",
+    "showdown": "2.1.0"
   }
 }
