--- a/packages/ts-plugin/package.json
+++ b/packages/ts-plugin/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint src",
     "test": "vitest",
     "unit": "npx mocha ./build/test",
-    "watch:compile": "node ./build.js --watch"
+    "watch:compile": "node ./build.js"
   },
   "dependencies": {
     "@twind/intellisense": "1.1.3",
