--- a/packages/ts-plugin/package.json
+++ b/packages/ts-plugin/package.json
@@ -15,17 +15,20 @@
     "watch:compile": "node ./build.js"
   },
   "dependencies": {
-    "@twind/intellisense": "1.1.3",
+    "@ctrl/tinycolor": "3.6.0",
     "@universal-labs/twind-adapter": "workspace:*",
     "@vscode/emmet-helper": "2.9.2",
+    "cssbeautify": "0.3.1",
+    "genex": "1.1.0",
+    "match-sorter": "6.3.1",
+    "quick-lru": "6.1.1",
+    "showdown": "2.1.0",
     "typescript-template-language-service-decorator": "2.3.2",
     "vscode-css-languageservice": "6.2.6",
     "vscode-languageserver-textdocument": "1.0.8"
   },
   "devDependencies": {
     "@types/cssbeautify": "0.3.2",
-    "@types/showdown": "2.0.1",
-    "cssbeautify": "0.3.1",
-    "showdown": "2.1.0"
+    "@types/showdown": "2.0.1"
   }
 }
