feat(ts): intellisense plugin for css in styled

--- a/package.json
+++ b/package.json
@@ -34,11 +34,10 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
-    "@nrwl/devkit": "16.5.2",
-    "@nrwl/eslint-plugin-nx": "16.5.2",
-    "@nrwl/js": "16.5.2",
-    "@nrwl/linter": "16.5.2",
-    "@nrwl/nx-cloud": "16.1.0",
+    "@nx/devkit": "16.6.0",
+    "@nx/eslint-plugin": "16.6.0",
+    "@nx/js": "16.6.0",
+    "@nx/linter": "16.6.0",
     "@rollup/plugin-terser": "^0.4.1",
     "@types/chai": "4.3.5",
     "@types/glob": "^8.1.0",
@@ -66,7 +65,8 @@
     "happy-dom": "latest",
     "jsdom": "latest",
     "mocha": "^10.2.0",
-    "nx": "16.5.2",
+    "nx": "16.6.0",
+    "nx-cloud": "16.2.0",
     "prettier": "^2.8.3",
     "react-test-renderer": "18.2.0",
     "tslib": "^2.6.0",
