--- a/packages/ts-plugin/package.json
+++ b/packages/ts-plugin/package.json
@@ -22,6 +22,7 @@
     "genex": "1.1.0",
     "match-sorter": "6.3.1",
     "quick-lru": "6.1.1",
+    "ret": "0.5.0",
     "showdown": "2.1.0",
     "typescript-template-language-service-decorator": "2.3.2",
     "vscode-css-languageservice": "6.2.6",
