--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@universal-labs/tailwind",
+  "name": "@universal-labs/twind-native",
   "version": "1.1.3",
   "description": "Tailwind for react native and react native web.",
   "keywords": [
@@ -11,16 +11,6 @@
     "native-tailwind"
   ],
   "sideEffects": false,
-  "type": "module",
-  "exports": {
-    ".": {
-      "default": "./build/index.cjs.js",
-      "import": "./build/index.es.js",
-      "require": "./build/index.cjs.js",
-      "types": "./build/index.d.ts"
-    },
-    "./package.json": "./package.json"
-  },
   "main": "./build/index.cjs.js",
   "module": "./build/index.es.js",
   "types": "./build/index.d.ts",
