--- a/packages/twind-adapter/package.json
+++ b/packages/twind-adapter/package.json
@@ -44,7 +44,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@universal-labs/tailwind": "workspace:*"
+    "@universal-labs/twind-native": "workspace:*"
   },
   "peerDependencies": {
     "react": ">=18",
