feat(ts-plugin): reorder utils

--- a/packages/ts-plugin/tsconfig.json
+++ b/packages/ts-plugin/tsconfig.json
@@ -11,5 +11,5 @@
     "sourceMap": true,
     "skipLibCheck": true
   },
-  "exclude": ["test","build", "e2e", "**/node_modules"]
+  "exclude": ["test", "build", "e2e", "**/node_modules", "vitest.config.ts"]
 }
