--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@universal-labs/css": "workspace:*",
     "@universal-labs/twind-adapter": "workspace:*",
+    "@universal-labs/twind-native": "workspace:*",
     "react-is": "^18.2.0",
     "stable-hash": "0.0.3"
   },
