--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -16,7 +16,7 @@
   "types": "./build/index.d.ts",
   "scripts": {
     "build:libs": "vite build",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "dependencies": {
     "csstype": "^3.1.1"
