--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@universal-labs/styled": "workspace:*",
+    "clsx": "2.0.0",
     "expo": "^49.0.3",
     "expo-build-properties": "~0.8.3",
     "expo-font": "~11.4.0",
