feat(examples): examples fix

--- a/examples/expo-app/tsconfig.json
+++ b/examples/expo-app/tsconfig.json
@@ -6,7 +6,12 @@
     "exactOptionalPropertyTypes": false,
     "allowJs": true,
     "resolveJsonModule": true,
-    "noEmit": true
+    "noEmit": true,
+    "plugins": [
+      {
+        "name": "@universal-labs/ts-styled-plugin-tw"
+      }
+    ]
   },
   "references": [],
   "exclude": [
