--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -8,40 +8,80 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "publisher": "universal-labs",
-  "main": "client/out/extension.js",
+  "main": "./build/extension.js",
   "scripts": {
-    "build:libs": "tsc -b",
-    "postinstall": "cd client && yarn install && cd ../server && yarn install && cd ..",
-    "lint": "eslint ./client/src ./server/src --ext .ts,.tsx",
+    "build:libs": "node ./build.js",
+    "lint": "eslint . --ext .ts,.tsx",
     "test": "echo \"TEST\"",
-    "test:e2e": "sh ./scripts/e2e.sh",
-    "vscode:prepublish": "tsc -b",
-    "watch": "tsc -b -w"
+    "vscode:prepublish": "node ./build.js",
+    "watch": "node ./build.js --watch"
   },
   "contributes": {
-    "configuration": {
-      "type": "object",
-      "title": "Configuration for native styled",
-      "properties": {
-        "styledLanguageTW.maxNumberOfProblems": {
-          "scope": "resource",
-          "type": "number",
-          "default": 100,
-          "description": "Controls the maximum number of problems produced by the server."
-        },
-        "styledLanguageTW.trace.server": {
-          "scope": "window",
-          "type": "string",
-          "enum": [
-            "off",
-            "messages",
-            "verbose"
-          ],
-          "default": "off",
-          "description": "Traces the communication between VS Code and the language server."
+    "commands": [
+      {
+        "command": "nativeTailwind.restart",
+        "title": "Native Tailwind: Restart IntelliSense"
+      },
+      {
+        "command": "nativeTailwind.className",
+        "title": "Native Tailwind: Replace className strings"
+      }
+    ],
+    "configuration": [
+      {
+        "id": "nativeTailwind",
+        "title": "Native Tailwind",
+        "properties": {
+          "styledLanguageTW.tags": {
+            "type": "array",
+            "description": "List of template tags to enable Native Tailwind intellisense in.",
+            "items": {
+              "type": "string",
+              "description": "Tag name."
+            },
+            "default": [
+              "tw",
+              "apply"
+            ]
+          },
+          "styledLanguageTW.attributes": {
+            "type": "array",
+            "description": "List of html/jsx attributes to enable Native Tailwind intellisense in.",
+            "items": {
+              "type": "string",
+              "description": "Attribute name."
+            },
+            "default": [
+              "tw",
+              "className",
+              "class"
+            ]
+          },
+          "styledLanguageTW.styles": {
+            "type": "array",
+            "description": "List of style/styled functions to enable Native Tailwind intellisense in.",
+            "items": {
+              "type": "string",
+              "description": "Style function name."
+            },
+            "default": [
+              "style",
+              "styled"
+            ]
+          },
+          "styledLanguageTW.debug": {
+            "type": "boolean",
+            "description": "Enable/disable additional debug information.",
+            "default": false
+          },
+          "styledLanguageTW.enable": {
+            "type": "boolean",
+            "default": true,
+            "markdownDescription": "Controls whether Twind intellisense is enabled or not."
+          }
         }
       }
-    },
+    ],
     "typescriptServerPlugins": [
       {
         "name": "@universal-labs/ts-styled-plugin-tw",
@@ -50,10 +90,7 @@
     ]
   },
   "activationEvents": [
-    "onLanguage:typescript",
-    "onLanguage:typescriptreact",
-    "onLanguage:javascript",
-    "onLanguage:javascriptreact"
+    "onStartupFinished"
   ],
   "dependencies": {
     "@universal-labs/ts-styled-plugin-tw": "workspace:*",
@@ -61,7 +98,8 @@
   },
   "devDependencies": {
     "@types/vscode": "1.80.0",
-    "@vscode/test-electron": "^2.3.3"
+    "@vscode/test-electron": "^2.3.3",
+    "vscode-test": "1.6.1"
   },
   "engines": {
     "vscode": "^1.80.0"
