--- a/packages/ts-plugin/e2e/project-fixture/.vscode/settings.json
+++ b/packages/ts-plugin/e2e/project-fixture/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "typescript.tsdk": "node_modules/typescript/lib",
-    "typescript.tsserver.log": "normal"
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
